# mobile_robot_navigation_v1

./: .gitignore  .gitmodules  frames_2025-11-29_21.06.42.gv
src/my_bot/: CMakeLists.txt  package.xml
src/my_bot/config/: my_controllers.yaml  view_bot.rviz
src/my_bot/description/: robot.urdf.xacro  ros2_control.xacro
src/my_bot/launch/: bringup.launch.py  launch_robot.launch.py  online_async_launch.py  rsp.launch_v2.py  rsp.launch_v3.py
src/my_bot/meshes/: linkbanhphai.STL  linkbanhtrai.STL  linklidar.STL  linkphusau.STL  linkphutruoc.STL
src/my_bot/rviz/: my_bot.rviz  mybot.rviz
src/my_bot/scripts/: twist_2_twiststamped.py
src/stm32_diff_drive_hardware/: CMakeLists.txt  package.xml  stm32_diff_drive_hardware_plugin.xml
src/stm32_diff_drive_hardware/include/stm32_diff_drive_hardware/: diff_drive_hardware.hpp
src/stm32_diff_drive_hardware/src/: diff_drive_hardware.cpp
src/stm32_diff_drive_msgs/: CMakeLists.txt  package.xml
src/twist_stamper/: package.xml  setup.py
src/twist_stamper/launch/: twist_stamper.launch.py
src/twist_stamper/twist_stamper/: twist_stamper.py
