<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="my_email@email.com">MY NAME</maintainer>
  <license>TODO: License declaration</license>

   <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz2</depend>

  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Simulation & control -->
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>